// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PasswordStrengthMeter Bon smoke-test 1`] = `
<section>
  <div class="w-full bg-gray-200 rounded-full h-2.5">
    <div class="bg-warning-3 h-2.5 rounded-full"
         style="width: 75%;"
    >
    </div>
  </div>
  <label class="text-grey-7 block text-sm">
    Bon
  </label>
</section>
`;

exports[`components/PasswordStrengthMeter Faible smoke-test 1`] = `
<section>
  <div class="w-full bg-gray-200 rounded-full h-2.5">
    <div class="bg-error-1 h-2.5 rounded-full"
         style="width: 25%;"
    >
    </div>
  </div>
  <label class="text-error-1 block text-sm">
    Faible
  </label>
  <label>
    Les lignes droites de touches de votre clavier sont faciles à deviner
  </label>
  <ul class="mt-2 ml-4 text-sm list-disc">
    <li>
      Évitez les séquences de caractères courantes.
    </li>
    <li>
      Évitez les substitutions de lettres prévisibles comme '@' pour 'a'.
    </li>
  </ul>
</section>
`;

exports[`components/PasswordStrengthMeter Nul smoke-test 1`] = `
<section>
  <div class="w-full bg-gray-200 rounded-full h-2.5">
    <div class="bg-error-1 h-2.5 rounded-full"
         style="width: 0%;"
    >
    </div>
  </div>
  <label class="text-error-1 block text-sm">
  </label>
  <label>
    Les lignes droites de touches de votre clavier sont faciles à deviner
  </label>
  <ul class="mt-2 ml-4 text-sm list-disc">
    <li>
      Évitez les séquences de caractères courantes.
    </li>
    <li>
      Évitez les substitutions de lettres prévisibles comme '@' pour 'a'.
    </li>
  </ul>
</section>
`;

exports[`components/PasswordStrengthMeter Passable smoke-test 1`] = `
<section>
  <div class="w-full bg-gray-200 rounded-full h-2.5">
    <div class="bg-warning-1 h-2.5 rounded-full"
         style="width: 50%;"
    >
    </div>
  </div>
  <label class="text-warning-1 block text-sm">
    Passable
  </label>
  <label>
    Les lignes droites de touches de votre clavier sont faciles à deviner
  </label>
  <ul class="mt-2 ml-4 text-sm list-disc">
    <li>
      Évitez les séquences de caractères courantes.
    </li>
    <li>
      Évitez les substitutions de lettres prévisibles comme '@' pour 'a'.
    </li>
  </ul>
</section>
`;

exports[`components/PasswordStrengthMeter Robuste smoke-test 1`] = `
<section>
  <div class="w-full bg-gray-200 rounded-full h-2.5">
    <div class="bg-success h-2.5 rounded-full"
         style="width: 100%;"
    >
    </div>
  </div>
  <label class="text-success block text-sm">
    Robuste
  </label>
</section>
`;
